home work 1 done

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Isaac's Portfolio</title>
-    <link rel="stylesheet" href="C:\Users\fiuza\Desktop\demo\Basic-Portfolio\assets\css\style.css">
+    <link rel="stylesheet" href="C:\users\fiuza\Desktop\demo\ifiuza.github.io\css\style.css">
 
 </head>
 
