--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About me</title>
-  <link rel="stylesheet" href="C:\Users\fiuza\Desktop\demo\Basic-Portfolio\assets\css\style.css">
+  <link rel="stylesheet" href="C:\users\fiuza\Desktop\demo\ifiuza.github.io\css\style.css">
 </head>
 
 <body>
