home work 1 done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>About Me</h1>
       <hr><br>
 
-      <img id="me"src="C:\Users\fiuza\Desktop\demo\Basic-Portfolio\assets\images\me.jpg" alt="" srcset="my picture">
+      <img id="me"src="./assets\images\me.jpg" alt="" srcset="my picture">
 
       <p>My name is Isaac Fiuza. I was born in California and grew up in Brazil until I was 14 when I came back to the
         U.S
