updating links in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Isaac's Portfolio</title>
-    <link rel="stylesheet" href=".\assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 
 </head>
 
@@ -26,26 +26,28 @@
 
             <div class="contains-image">
                 <img src="http://lorempixel.com/output/technics-q-c-280-250-10.jpg" alt="pc">
-                <div class="image-description">BootCamp -CSS & HTML Projects</div>
+                <div class="image-description"><a href="https://ifiuza.github.io/Responsive-Portfolio/index.html">
+                    CSS & HTML Project (Responsive) </a></div>
             </div>
             <div class="contains-image">
                 <img src="http://lorempixel.com/output/technics-q-c-280-250-7.jpg" alt="pc">
-                <div class="image-description">Udemy Web Development</div>
+                <div class="image-description"> <a href="https://ifiuza.github.io/Bootstrap-Portfolio/index.html">
+                    Bootstrap Project</a></div>
             </div>
             <div class="contains-image">
                 <img src="http://lorempixel.com/output/technics-q-c-280-250-4.jpg" alt="pc">
-                <div class="image-description">SLCC Projects</div>
+                <div class="image-description"><a href="https://ifiuza.github.io/wordguessgame/index.html">
+                    
+                    JavaScritp Project </a></div>
             </div>
             <div class="contains-image">
                 <img src="http://lorempixel.com/output/technics-q-c-280-250-1.jpg" alt="pc">
-                <div class="image-description">JavaScript</div>
+                <div class="image-description">JQuery Project</div>
             </div>
             <div class="contains-image">
                 <img src="http://lorempixel.com/output/technics-q-c-280-250-9.jpg" alt="pc">
                 <div class="image-description">Other Web Design Projects</div>
             </div>
-
-
 
 
         </main>
