--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About me</title>
-  <link rel="stylesheet" href=".\assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
         become a Web Developer.</p>
       <br>
     </main>
-    <footer>by Isaac © 2019</footer>
+    <footer id="footerpg1">by Isaac © 2019</footer>
   </div>
 
 </body>
