--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,8 @@
             </div>
             <div class="contains-image">
                 <img src="http://lorempixel.com/output/technics-q-c-280-250-1.jpg" alt="pc">
-                <div class="image-description">JQuery Project</div>
+                <div class="image-description"><a href="https://ifiuza.github.io/unit-4-game/index.html">
+                    JQuery Project</a></div>
             </div>
             <div class="contains-image">
                 <img src="http://lorempixel.com/output/technics-q-c-280-250-9.jpg" alt="pc">
