--- a/portfolio.html
+++ b/portfolio.html
@@ -46,8 +46,9 @@
                     JQuery Project</a></div>
             </div>
             <div class="contains-image">
-                <img src="http://lorempixel.com/output/technics-q-c-280-250-9.jpg" alt="pc">
-                <div class="image-description">Other Web Design Projects</div>
+                <img src="http://lorempixel.com/output/technics-q-c-280-250-1.jpg" alt="pc">
+                <div class="image-description"><a href="https://ifiuza.github.io/TriviaGame">
+                    JavaScritp Project 2</a></div>
             </div>
 
 
