--- a/contact.html
+++ b/contact.html
@@ -1,48 +1,161 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=A, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact Me</title>
-    <link rel="stylesheet" href=".\assets/css/style.css">
+    <title>Homework 2 by Isaac Fiuza</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <style>
+        body {
+            background-color: rgb(204, 196, 196);
+        }
+
+        .navbar-brand {
+            font-size: 1.95em;
+            color: #4aaaa5;
+            font-family: 'Georgia', Times, Times New Roman, serif;
+        }
+
+        .text-center {
+            background-color: #666666;
+        }
+
+        .card {
+            background-color: #666666;
+        }
+
+        .card-body {
+            font-size: 1.95em;
+            color: #4aaaa5;
+            font-family: 'Georgia', Times, Times New Roman, serif;
+
+        }
+
+        .contains-image {
+            position: relative;
+            float: left;
+            margin-left: 15px;
+            margin-bottom: 15px;
+        }
+
+        .image-description {
+            background-color: #4aaaa5;
+            width: 280px;
+            height: 70px;
+            position: absolute;
+            top: 170px;
+            font-size: 1.45em;
+            color: #ffffff;
+        }
+
+
+        input[type=text],
+        select {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        input[type=submit] {
+            width: 20%;
+            background-color: #4aaaa5;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        #msg {
+            height: 200px;
+        }
+    </style>
+
 </head>
 
-<body>
+<body>  
 
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Isaac Fiuza</a>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">About Me <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact me </a>
+                </li>
+                <li class="nav-item">
+                        <a class="nav-link" href="resume.pdf">My Resume</a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
     <div class="container">
-        <header>Isaac Fiuza</header>
-        <div class="menu">
-            <a href="index.html">About Me | </a>
-            <a href="portfolio.html">Portfolio |</a>
-            <a href="contact.html"> Contact Me</a>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card">
+                    <div class="card-body">
+                        Contact Me
+                    </div>
+                </div>
+            </div>
         </div>
 
+        <div>
+            <form action="/action_page.php">
+                <label for="fname">Name</label>
+                <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
-        <main>
+                <label for="email">Email</label>
+                <input type="text" id="email" name="youremail" placeholder="Your Email.."><br>
 
-            <h1>Contact</h1>
-            <hr><br>
-
-            <div>
-                <form action="/action_page.php">
-                    <label for="fname">Name</label>
-                    <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-                    <label for="email">Email</label>
-                    <input type="text" id="email" name="youremail" placeholder="Your Email.."><br>
-
-                    <label for="message">Message</label><br>
-                    <input type="text" id="msg" name="yourmsg" placeholder="">
+                <label for="message">Message</label><br>
+                <input type="text" id="msg" name="yourmsg" placeholder="">
 
 
-                    <input type="submit" value="Submit">
-                </form>
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="text-center">
+                           <a href="index.html"> <img class="" src="http://placehold.it/50x50" alt=""></a>
+                           <a href="portfolio.html"> <img class="" src="http://placehold.it/50x50" alt=""></a>
+                           <a href="contact.html"> <img class="" src="http://placehold.it/50x50" alt=""></a>
+                           <a href="resume.pdf"> <img class="" src="http://placehold.it/50x50" alt=""></a>
+                    </div>
+                </div>
             </div>
-
-        </main>
-        <footer>by Isaac © 2019</footer>
+        </div>
     </div>
+
+
+
 
 
 </body>
