changing to bootstrap

--- a/portfolio.html
+++ b/portfolio.html
@@ -105,9 +105,9 @@
         <b> CSS & HTML Project (Responsive)</b> </a>
         <a href="https://github.com/ifiuza/Responsive-Portfolio"> - See Code on GitHub</a>
 
-        <br><a href="https://ifiuza.github.io/Bootstrap-Portfolio/index.html">
+        <br><a href="https://ifiuza.github.io/">
         <b>Bootstrap Project</b></a>
-        <a href="https://github.com/ifiuza/Bootstrap-Portfolio"> - See Code on GitHub</a>
+        <a href="https://github.com/ifiuza/ifiuza.github.io"> - See Code on GitHub</a>
         
         <br><a href="https://ifiuza.github.io/wordguessgame/index.html">
         <b> JavaScript Project</b> </a>
