fixing hamburger menu and other css

--- a/index.html
+++ b/index.html
@@ -28,14 +28,6 @@
       background-color: #666666;
       position: relative;
     }
-
-    .card-body {
-      font-size: 1.95em;
-      color: #4aaaa5;
-      font-family: 'Georgia', Times, Times New Roman, serif;
-
-
-    }
   </style>
 
 </head>
@@ -105,17 +97,26 @@
       <div class="col-lg-12">
         <div class="card">
           <div class="card-body">
-            <div class="text-center">
-              <a href="index.html"> <img class="" src="http://placehold.it/50x50" alt=""></a>
-              <a href="portfolio.html"> <img class="" src="http://placehold.it/50x50" alt=""></a>
-              <a href="contact.html"> <img class="" src="http://placehold.it/50x50" alt=""></a>
-              <a href="resume.pdf"> <img class="" src="http://placehold.it/50x50" alt=""></a>
-            </div>
+            <a class="nav-link" href="https://github.com/ifiuza">My GitHub Projects</a>
+            <a class="nav-link" href="https://www.linkedin.com/in/isaac-fiuza-2b9104100/">My Linkedin</a>
+            <a class="nav-link" href="https://ifiuza.github.io/resume.pdf">My Resume</a>
           </div>
         </div>
       </div>
     </div>
   </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+
 
 </body>
 
