--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,7 @@
                 </div>
             </div>
         </div>
-        <p><b>You can reach me by phone or email at (801)979-4813 / fiuzaisaac@hotmail.com</p>
+        <p><br><br><b>You can reach me by phone or email at (801)979-4813 / fiuzaisaac@hotmail.com</p>
         <p> Also check me out on <a href="https://github.com/ifiuza">
                 My GitHub </a>and <a href="https://www.linkedin.com/in/isaac-fiuza-2b9104100/"> My Linkedin</a></b></p>
 
