adding updated portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,11 @@
                 <a href=" https://github.com/zuzethromo/CryptoNewsConsolidator"> - See Code on GitHub</a>
         
                 <br><a href=" https://github.com/ifiuza/liri-node-app/commits/master/">
-                    <b> LIRI Bot Homework </b> See code on github (screenshots on git repository)</a>
+                    <b> LIRI Bot Homework </b> See code on github (screenshots on README file)</a>
+                <br><a href="https://github.com/ifiuza/homework12">
+                    <b> Node.js & MySQL </b> See code on github (screenshots on README file)</a>
+
+
            
       </div>
     </div>
