adding to my portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -132,6 +132,15 @@
                       <a href="https://github.com/ifiuza/fitToScrape">
                           <b>News That's Fit to Scrape</b> See code on github</a> <a href="https://fathomless-spire-07714.herokuapp.com/">  &  Heroku link
                           </a>
+                          <br>
+                          <a href="https://github.com/ifiuza/clickyGame/tree/master/my-react-app">
+                            <b> Clicky Game</b> See code on github</a> <a href=" https://isaac-clicky-game.herokuapp.com">  &  Heroku link
+                            </a>
+                          <br>
+                          <a href=" https://github.com/julioguzman19/ForGoodnessCakes">
+                            <b>Project 3 </b> See code on github</a> <a href="https://for-goodness-cakes.herokuapp.com/">  &  Heroku link
+                            </a>
+
               
                             
 
