fixing link to git

--- a/portfolio.html
+++ b/portfolio.html
@@ -133,7 +133,7 @@
                           <b>News That's Fit to Scrape</b> See code on github</a> <a href="https://fathomless-spire-07714.herokuapp.com/">  &  Heroku link
                           </a>
                           <br>
-                          <a href="https://github.com/ifiuza/clickyGame/tree/master/my-react-app">
+                          <a href="https://github.com/ifiuza/clickyGame/">
                             <b> Clicky Game</b> See code on github</a> <a href=" https://isaac-clicky-game.herokuapp.com">  &  Heroku link
                             </a>
                           <br>
