--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="card-body">
             <a class="nav-link" href="https://github.com/ifiuza">My GitHub Projects</a>
             <a class="nav-link" href="https://www.linkedin.com/in/isaac-fiuza-2b9104100/">My Linkedin</a>
-            <a class="nav-link" href="https://ifiuza.github.io/resume.pdf">My Resume</a>
+            <a class="nav-link" href="https://ifiuza.github.io/finalresume.pdf">My Resume</a>
           </div>
         </div>
       </div>
