--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
           <a class="nav-link" href="contact.html">Contact me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="resume.pdf">My Resume</a>
+          <a class="nav-link" href="finalresume.pdf">My Resume</a>
         </li>
 
       </ul>
