updating my main statement

--- a/index.html
+++ b/index.html
@@ -78,16 +78,23 @@
         <img class="img img-thumbnail" src="me.jpg">
       </div>
       <div id="about" class="col-lg-9">
-        <h2>My background</h2>
+        <h2>About Me</h2>
         <p> Hello my name is Isaac Fiuza. I was born in California in 1986 in the Bay Area.
           I also lived in Brazil as a kid and moved back to the U.S in 2001 where I have been living since then
-          in Salt Lake City.</p>
+          in Salt Lake City. <br></p>
 
-        <h2>Currently Studying</h2>
-        I graduated from Salt Lake Community College in 2015 with an associates in C.S with two cerificates, one in
-        software
-        development and another in Computer Essentials. I am currently enrolled in a Bootcamp for Web
-        development at the University of Utah and will be graduating in the end of October this year.
+        <h2>My background in IT</h2>
+        I graduated from The University of Utah Web Coding Camp in October 2019 as 
+          a full-stack developer. The course covered:
+          JavaScript - jQuery, React.
+          Technologies: JavaScript, jQuery, ReactJS, MongoDB, Express, React, Node,XML, JSON,
+          AJAX, HTML4/5, CSS3, Bootstrap, MySQL. Firebase. <br><br>
+        I also have an associates degree from Salt Lake Community College from where I graduated in 
+         2015 with an associates in C.S and two cerificates, one in
+        software (Java) and another in computer essentials.
+          <br> I currently work at Biofire Diagonostics doing Upgrades and troubleshooting
+          for the company's users. Prior to Biofire I worked at Dell EMC in tech support to 
+          customers and engineers of Dell.
 
       </div>
     </div>
