updating about me

--- a/index.html
+++ b/index.html
@@ -79,12 +79,9 @@
       </div>
       <div id="about" class="col-lg-9">
         <h2>About Me</h2>
-        <p> Hello my name is Isaac Fiuza. I was born in California in 1986 in the Bay Area.
-          I also lived in Brazil as a kid and moved back to the U.S in 2001 where I have been living since then
-          in Salt Lake City. <br></p>
 
         <h2>My background in IT</h2>
-        I graduated from The University of Utah Web Coding Camp in October 2019 as 
+        Hello my name is Isaac Fiuza. I graduated from The University of Utah Web Coding Camp in October 2019 as 
           a full-stack developer. The course covered:
           JavaScript - jQuery, React.
           Technologies: JavaScript, jQuery, ReactJS, MongoDB, Express, React, Node,XML, JSON,
