--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <div id="about" class="row">
       <div class="col-lg-3">
-        <img class="img img-thumbnail" src="me.jpg">
+        <img class="img img-thumbnail" src="me.jpeg">
       </div>
       <div id="about" class="col-lg-9">
         <h2>About Me</h2>
