--- a/index.html
+++ b/index.html
@@ -89,9 +89,12 @@
         I also have an associates degree from Salt Lake Community College from where I graduated in 
          2015 with an associates in C.S and two cerificates, one in
         software (Java) and another in computer essentials.
-          <br> I currently work at Biofire Diagonostics doing Upgrades and troubleshooting
-          for the company's users. Prior to Biofire I worked at Dell EMC in tech support to 
-          customers and engineers of Dell.
+          <br> 
+          <h2>Skills</h2>
+          <p><b>Configuration Specialist / Web Developer / Technical Support </b>
+          <br>Educated with an A.S. in Computer Science. Certificate from the University of Utah - Full Stack Web Developer.
+            Strengths in communication, problem
+            isolation, and solution, time managemen</p>
 
       </div>
     </div>
