updating main page
about me / skills

--- a/index.html
+++ b/index.html
@@ -78,23 +78,10 @@
         <img class="img img-thumbnail" src="me.jpeg">
       </div>
       <div id="about" class="col-lg-9">
-        <h2>About Me</h2>
-
-        <h2>My background in IT</h2>
-        Hello my name is Isaac Fiuza. I graduated from The University of Utah Web Coding Camp in October 2019 as 
-          a full-stack developer. The course covered:
-          JavaScript - jQuery, React.
-          Technologies: JavaScript, jQuery, ReactJS, MongoDB, Express, React, Node,XML, JSON,
-          AJAX, HTML4/5, CSS3, Bootstrap, MySQL. Firebase. <br><br>
-        I also have an associates degree from Salt Lake Community College from where I graduated in 
-         2015 with an associates in C.S and two cerificates, one in
-        software (Java) and another in computer essentials.
-          <br> 
-          <h2>Skills</h2>
+          <h2>About Me /Skills</h2>
           <p><b>Configuration Specialist / Web Developer / Technical Support </b>
           <br>Educated with an A.S. in Computer Science. Certificate from the University of Utah - Full Stack Web Developer.
-            Strengths in communication, problem
-            isolation, and solution, time managemen</p>
+               Strengths in communication, problem isolation, and solution, time management.</p>
 
       </div>
     </div>
