--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     body {
       background-color: rgb(204, 196, 196);
     }
+    
+    .img img-thumbnail {
+      border-radius: 5%
+    }
 
     .navbar-brand {
       font-size: 1.95em;
