--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       background-color: rgb(204, 196, 196);
     }
     
-    .img-thumbnail {
+    .img img-thumbnail {
       border-radius: 10%
     }
 
