--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
             Prior to  this I was a Configuration Specialist on my last job, where I ran tests and configured pre-paid products before they were sold to retail.  
             Also check my Project Page to see my latest Capstone Project  using Data Analysis in R, SQL, Tableau and Excel:
           <br>
-            https://sites.google.com/view/icf-isaac-c-fiuza/home
+            <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/home" target="_blank">
+                <b> CaseStudy Project - Done with Google Sheets, BigQuery, Tabkeau and R. </b></a>
           </p>
 
       </div>
