--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </div>
       <div id="about" class="col-lg-9">
           <h2>About Me /Skills</h2>
-          <p><b>Configuration Specialist / Web Developer / Technical Support </b>
+          <p><b>Data Analyst / Configuration Specialist / Web Developer / Technical Support </b>
           <br>Educated with an A.S. in Computer Science. Certificate from the University of Utah - Full Stack Web Developer.
                Strengths in communication, problem isolation, and solution, time management.
           <br><br>
@@ -92,7 +92,7 @@
             Also check my Project Page to see my latest Capstone Project  using Data Analysis in R, SQL, Tableau and Excel:
           <br>
             <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/home" target="_blank">
-                <b> CaseStudy Project - Done with Google Sheets, BigQuery, Tabkeau and R. </b></a>
+                <b> CaseStudy Project - Done with Google Sheets, BigQuery, Tableau and R. </b></a>
           </p>
 
       </div>
