--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
       <div id="about" class="col-lg-9">
           <h2>About Me /Skills</h2>
           <p><b>Data Analyst / Configuration Specialist / Web Developer / Technical Support </b>
-          <br>Educated with an A.S. in Computer Science. Certificate from the University of Utah - Full Stack Web Developer.
-               Strengths in communication, problem isolation, and solution, time management.
+          <br>Educated with an A.S. in Computer Science from Salt Lake Community College. 
+             <br>Certified from the University of Utah as a Full Stack Web Developer.
+               <br>Strengths in communication, problem isolation, and solution, time management.
           <br><br>
             I recently finished a Google course online and received my certification as a Data Analyst (April 2024).<br>
             Prior to  this I was a Configuration Specialist on my last job, where I ran tests and configured pre-paid products before they were sold to retail.  
