--- a/index.html
+++ b/index.html
@@ -92,9 +92,11 @@
             Prior to  this I was a Configuration Specialist on my last job, where I ran tests and configured pre-paid products before they were sold to retail.  
             Also check my Project Page to see my latest Capstone Project  using Data Analysis in R, SQL, Tableau and Excel:
           <br>
-            <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/home" target="_blank">
+          <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/home" target="_blank">
                 <b> CaseStudy Project - Done with Google Sheets, BigQuery, Tableau and R. </b></a>
           </p>
+           <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/machine-learning-in-r" target="_blank">
+                <b> Machine Learning Project in R </b></a>
 
       </div>
     </div>
