--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <h2>About Me /Skills</h2>
           <p><b>Data Analyst / Configuration Specialist / Web Developer / Technical Support </b>
           <br>Educated with an A.S. in Computer Science from Salt Lake Community College. 
-             <br>Certified from the University of Utah as a Full Stack Web Developer.
+             <br>Certified by the University of Utah as a Full Stack Web Developer.
                <br>Certified by Google as a Data Analyst.
           <br><br>
             I recently finished a Google course online and received my certification as a Data Analyst (April 2024).<br>
