--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
              <br>Certified by the University of Utah as a Full Stack Web Developer.
                <br>Certified by Google as a Data Analyst.
           <br><br>
-            I recently finished a Google course online and received my certification as a Data Analyst (April 2024).<br>
+            I recently finished a Google Data Analyst course online and received my certification as a Data Analyst (in April of 2024).<br>
             Prior to  this I was a Configuration Specialist on my last job, where I ran tests and configured pre-paid products before they were sold to retail.  
-            Also check my Project Page to see my latest Capstone Project  using Data Analysis in R, SQL, Tableau and Excel:
+            Also check my Data Analyst Projects Page to see my Data Analysis in R, SQL, Tableau and Excel:
           <br>
           <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/home" target="_blank">
                 <b> CaseStudy Project - Done with Google Sheets, BigQuery, Tableau and R. </b></a>
