--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             Prior to  this I was a Configuration Specialist on my last job, where I ran tests and configured pre-paid products before they were sold to retail.  
             Also check my Data Analyst Projects Page to see my Data Analysis in R, SQL, Tableau and Excel:
           <br>
+            <p1>Latest Projects</p1>
           <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/home" target="_blank">
                 <b> CaseStudy Project - Done with Google Sheets, BigQuery, Tableau and R. </b></a>
             <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/machine-learning-in-r" target="_blank">
@@ -108,6 +109,8 @@
             <a class="nav-link" href="https://github.com/ifiuza">My GitHub Projects</a>
             <a class="nav-link" href="https://www.linkedin.com/in/isaac-fiuza-2b9104100/">My Linkedin</a>
             <a class="nav-link" href="https://ifiuza.github.io/finalresume.pdf">My Resume</a>
+            <a class="nav-link" href="https://ifiuza.github.io/finalresume.pdf">My Data Analyst Projects</a>
+
           </div>
         </div>
       </div>
