--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             Prior to  this I was a Configuration Specialist on my last job, where I ran tests and configured pre-paid products before they were sold to retail.  
             Also check my Data Analyst Projects Page to see my Data Analysis in R, SQL, Tableau and Excel:
           <br>
-            <p><b>>Latest Projects</b></p>
+            <p><b>>Latest Projects:</b></p>
           <a href="https://sites.google.com/view/icf-isaac-c-fiuza/home" target="_blank">
                 <b> CaseStudy Project - Done with Google Sheets, BigQuery, Tableau and R. </b></a>
             <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/machine-learning-in-r" target="_blank">
