--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <a class="nav-link" href="https://github.com/ifiuza">My GitHub Projects</a>
             <a class="nav-link" href="https://www.linkedin.com/in/isaac-fiuza-2b9104100/">My Linkedin</a>
             <a class="nav-link" href="https://ifiuza.github.io/finalresume.pdf">My Resume</a>
-            <a class="nav-link" href="https://ifiuza.github.io/finalresume.pdf">My Data Analyst Projects</a>
+            <a class="nav-link" href="https://sites.google.com/view/icf-isaac-c-fiuza/home">My Data Analyst Projects</a>
 
           </div>
         </div>
