--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
             Also check my Data Analyst Projects Page to see my Data Analysis in R, SQL, Tableau and Excel:
           <br>
             <p><b>Latest Projects:</b></p>
-          <a href="https://sites.google.com/view/icf-isaac-c-fiuza/home" target="_blank">
-                <b> CaseStudy Project - Done with Google Sheets, BigQuery, Tableau and R. </b></a>
+          <a href="https://sites.google.com/view/icf-isaac-c-fiuza/data-casestudy-project">
+                <b> - CaseStudy Project - Done with Google Sheets, BigQuery, Tableau and R. </b></a>
             <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/machine-learning-in-r" target="_blank">
-                <b> Machine Learning Project in R </b></a>
+                <b>  - Machine Learning Project in R </b></a>
           </p>
       </div>
     </div>
