--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div class="col-lg-12">
         <div class="card">
           <div class="card-body">
-            <a class="nav-link" href="https://github.com/ifiuza">My GitHub Projects</a>
+            <a class="nav-link" href="https://github.com/ifiuza?tab=repositories">My GitHub Projects</a>
             <a class="nav-link" href="https://www.linkedin.com/in/isaac-fiuza-2b9104100/">My Linkedin</a>
             <a class="nav-link" href="https://ifiuza.github.io/finalresume.pdf">My Resume</a>
             <a class="nav-link" href="https://sites.google.com/view/icf-isaac-c-fiuza/home">My Data Analyst Projects</a>
