--- a/portfolio.html
+++ b/portfolio.html
@@ -75,8 +75,7 @@
     <div id="about" class="row">
       
       <div id="about" class="col-lg-9">
-            <p><b> As of May (2023) I have started again to create and add new projects to contribute to my Portfolio</b></p>
-            <p><b> Please reach out to me by phone or email at (801)979-4813 / fiuzaisaac@hotmail.com  if you have any questions/suggestions or if you want to interview me for a Job.</p>
+            <p><b> Please reach out to me by phone or email at (801)979-4813 / fiuzaisaac@hotmail.com  if you have any questions/suggestions or for <i>help</i> building your <b></b>own website</b></p>
                 <p> Also check me out on <a href="https://github.com/ifiuza">
                         My GitHub </a>and <a href="https://www.linkedin.com/in/isaac-fiuza-2b9104100/"> My Linkedin</a></b></p>
 
