--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,8 @@
     <div id="about" class="row">
       
       <div id="about" class="col-lg-9">
-            <p><b> Please reach out to me by phone or email at (801)979-4813         <img src="download.jpeg">
+            <p><b> Please reach out to me by phone or email at (801)979-4813               <img class="img img-thumbnail" src="download.jpeg">
+
 / fiuzaisaac@hotmail.com  if you have any questions/suggestions or for <i>help</i> building your <b></b>own website</b></p>
                 <p> Also check me out on <a href="https://github.com/ifiuza">
                         My GitHub </a>and <a href="https://www.linkedin.com/in/isaac-fiuza-2b9104100/"> My Linkedin</a></b></p>
