--- a/index.html
+++ b/index.html
@@ -97,10 +97,11 @@
                 <b> - CaseStudy Project - Done with Google Sheets, BigQuery, Tableau and R. </b></a>
             <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/machine-learning-in-r" target="_blank">
                 <b>  - Machine Learning Project in R </b></a>
+          <p>Please reach out to me by phone or email at (801)979-4813<img class="img img-thumbnail" src="download(1).png">
+            / fiuzaisaac@hotmail.com if you have any questions/suggestions or for help building your own website</p>
           </p>
       </div>
     </div>
-    <br>
     <br>
     <div class="row">
       <div class="col-lg-12">
@@ -110,7 +111,6 @@
             <a class="nav-link" href="https://www.linkedin.com/in/isaac-fiuza-2b9104100/">My Linkedin</a>
             <a class="nav-link" href="https://ifiuza.github.io/finalresume.pdf">My Resume</a>
             <a class="nav-link" href="https://sites.google.com/view/icf-isaac-c-fiuza/home">My Data Analyst Projects</a>
-
           </div>
         </div>
       </div>
