--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
           <a href="https://sites.google.com/view/icf-isaac-c-fiuza/data-casestudy-project">
                 <b> - CaseStudy Project - Done with Google Sheets, BigQuery, Tableau and R. </b></a>
             <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/machine-learning-in-r" target="_blank">
-                <b>  - Machine Learning Project in R </b></a>
-          <p>Please reach out to me by phone or email at (801)979-4813<img class="img img-thumbnail" src="download(1).png">
-            / fiuzaisaac@hotmail.com if you have any questions/suggestions or for help building your own website</p>
+                <b>  - Machine Learning Project in R</b></a>
+        <br>
+          <p>Please reach out to me by phone or email at <b>(801)979-4813</b><img src="sup.jpeg">/<b>fiuzaisaac@hotmail.com</b> if you have any questions/suggestions or for help building your own website</p>
           </p>
       </div>
     </div>
