--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
             <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/machine-learning-in-r" target="_blank">
                 <b>  - Machine Learning Project in R</b></a>
         <br>
-          <p>Please reach out to me by phone or email at <b>(801)979-4813</b><img src="sup.jpeg">/<b>fiuzaisaac@hotmail.com</b> if you have any questions/suggestions or for help building your own website</p>
+        <br>
+          <p>Please reach out to me by phone or email at <b>(801)979-4813/fiuzaisaac@hotmail.com</b> if you have any questions/suggestions or for help building your own website</p>
           </p>
       </div>
     </div>
