--- a/portfolio.html
+++ b/portfolio.html
@@ -75,9 +75,10 @@
     <div id="about" class="row">
       
       <div id="about" class="col-lg-9">
-            <p><b> Please reach out to me by phone or email at <b>(801)979-4813/ fiuzaisaac@hotmail.com </b> if you have any questions/suggestions or for <i>help</i> building your <b></b>own website</b></p>
                 <p> Also check me out on <a href="https://github.com/ifiuza">
-                        My GitHub </a>and <a href="https://www.linkedin.com/in/isaac-fiuza-2b9104100/"> My Linkedin</a></b></p>
+                        My GitHub </a>, <a href="https://www.linkedin.com/in/isaac-fiuza-2b9104100/"> My Linkedin</a></b>
+                        And my <a href="https://sites.google.com/view/icf-isaac-c-fiuza/home"> Data Analyst Projects </a></p> 
+              
 
                       <a href="https://bespoke-griffin-fd3aa4.netlify.app/" target="_blank">
                           <b> A BlackJack Game. (JavaScript)</Script></b> </a>
