--- a/index.html
+++ b/index.html
@@ -96,7 +96,10 @@
           <a href="https://sites.google.com/view/icf-isaac-c-fiuza/data-casestudy-project">
                 <b> - CaseStudy Project - Done with Google Sheets, BigQuery, Tableau and R. </b></a>
             <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/machine-learning-in-r" target="_blank">
-                <b>  - Machine Learning Project in R</b></a>
+                <b>  - Machine Learning in R</b></a>
+            <br>a href="https://fiduccia-phonecasestshirts.printify.me/products" target="_blank">
+                <b>  - Fiduccia Phone Cases - My online store: Customized Phone Cases and T-Shirts. </b></a>
+            
         <br>
         <br>
           <p>Please reach out to me by phone or email at <b>(801)979-4813/fiuzaisaac@hotmail.com</b> if you have any questions/suggestions or for help building your own website</p>
