--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <b> - CaseStudy Project - Done with Google Sheets, BigQuery, Tableau and R. </b></a>
             <br><a href="https://sites.google.com/view/icf-isaac-c-fiuza/machine-learning-in-r" target="_blank">
                 <b>  - Machine Learning in R</b></a>
-            <br>a href="https://fiduccia-phonecasestshirts.printify.me/products" target="_blank">
+            <br><a href="https://fiduccia-phonecasestshirts.printify.me/products" target="_blank">
                 <b>  - Fiduccia Phone Cases - My online store: Customized Phone Cases and T-Shirts. </b></a>
             
         <br>
