--- a/index.html
+++ b/index.html
@@ -60,10 +60,7 @@
         </li>
 
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+  
     </div>
   </nav>
 
@@ -102,7 +99,7 @@
             
         <br>
         <br>
-          <p>Please reach out to me by phone or email at <b>(801)979-4813/fiuzaisaac@hotmail.com</b> if you have any questions/suggestions or for help building your own website</p>
+          <p>Reach out to me at <b>(801)979-4813/fiuzaisaac@hotmail.com</b> if you have any questions/suggestions or for help building your own website</p>
       </div>
     </div>
     <div class="row">
