--- a/index.html
+++ b/index.html
@@ -80,15 +80,11 @@
       </div>
       <div id="about" class="col-lg-9">
           <h2>About Me /Skills</h2>
-          <p><b>Data Analyst / Configuration Specialist / Web Developer / Technical Support </b>
+          <p><b>Data Analyst / Configuration Specialist / Web Developer / Technical Support / Car Buyer/ Online Store </b>
           <br>Educated with an A.S. in Computer Science from Salt Lake Community College. 
              <br>Certified by the University of Utah as a Full Stack Web Developer.
                <br>Certified by Google as a Data Analyst.
-          <br><br>
-            I recently finished a Google Data Analyst course online and received my certification as a Data Analyst (in April of 2024).<br>
-            Prior to  this I was a Configuration Specialist on my last job, where I ran tests and configured pre-paid products before they were sold to retail.  
-            Also check my Data Analyst Projects Page to see my Data Analysis in R, SQL, Tableau and Excel:
-          <br>
+          <br><br><br>
             <p><b>Latest Projects:</b></p>
           <a href="https://sites.google.com/view/icf-isaac-c-fiuza/data-casestudy-project">
                 <b> - CaseStudy Project - Done with Google Sheets, BigQuery, Tableau and R. </b></a>
@@ -99,7 +95,7 @@
             
         <br>
         <br>
-          <p>Reach out to me at <b>(801)979-4813/fiuzaisaac@hotmail.com</b> if you have any questions/suggestions or for help building your own website</p>
+          <p>Reach out to me at <b>(801)979-4813/fiuzaisaac@hotmail.com</b> if you have any questions/suggestions/help building your own website/Etc</p>
       </div>
     </div>
     <div class="row">
