--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
           <br>Educated with an A.S. in Computer Science from Salt Lake Community College. 
              <br>Certified by the University of Utah as a Full Stack Web Developer.
                <br>Certified by Google as a Data Analyst.
+                <br> +10 years in the car industry: Salesman, finance manager, car buyer.
+                 <br><b>New - My own </b> Online Store - Fiduccia Phone Cases & T-shirts
           <br><br><br>
             <p><b>Latest Projects:</b></p>
           <a href="https://sites.google.com/view/icf-isaac-c-fiuza/data-casestudy-project">
