--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
       </div>
       <div id="about" class="col-lg-9">
           <h2>About Me /Skills</h2>
-          <p><b>Data Analyst / Configuration Specialist / Web Developer / Technical Support / Car Buyer/ Online Store </b>
+          <p><b>Data Analyst / Configuration Specialist / Web Developer / Technical Support / Car Buyer/ Online Store Owner </b>
           <br><br>Educated with an A.S. in Computer Science from Salt Lake Community College. 
              <br>Certified by the University of Utah as a Full Stack Web Developer.
                <br>Certified by Google as a Data Analyst.
                 <br> 10+ years of experience in the car industry: Salesman, finance manager, car buyer.
-                 <br> My own new Online Store - Fiduccia Phone Cases & T-shirts
-          <br><br>
+                 <br> Online Store Owner - Fiduccia Phone Cases & T-shirts
+          <br>
             <p><b>Latest Projects:</b></p>
           <a href="https://sites.google.com/view/icf-isaac-c-fiuza/data-casestudy-project">
                 <b> - CaseStudy Project - Done with Google Sheets, BigQuery, Tableau and R. </b></a>
