--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
       <div id="about" class="col-lg-9">
           <h2>About Me /Skills</h2>
           <p><b>Data Analyst / Configuration Specialist / Web Developer / Technical Support / Car Buyer/ Online Store Owner </b>
-          <br><br>Educated with an A.S. in Computer Science from Salt Lake Community College. 
-             <br>Certified by the University of Utah as a Full Stack Web Developer.
-               <br>Certified by Google as a Data Analyst.
-                <br> 10+ years of experience in the car industry: Salesman, finance manager, car buyer.
-                 <br> Online Store Owner - Fiduccia Phone Cases & T-shirts
+          <br><br>- Educated with an A.S. in Computer Science from Salt Lake Community College. 
+             <br>- Certified by the University of Utah as a Full Stack Web Developer.
+               <br>- Certified by Google as a Data Analyst.
+                <br> - 10+ years of experience in the car industry: Salesman, finance manager, car buyer.
+                 <br> - Online Store Owner - Fiduccia Phone Cases & T-shirts
           <br>
             <p><b>Latest Projects:</b></p>
           <a href="https://sites.google.com/view/icf-isaac-c-fiuza/data-casestudy-project">
