--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             
         <br>
         <br>
-          <p>Reach out to me at <b>(801)979-4813/fiuzaisaac@hotmail.com</b> if you have any questions/suggestions/help building your own website/Etc</p>
+          <p>*** Reach out to me at <b>(801)979-4813/fiuzaisaac@hotmail.com</b> if you have any questions/suggestions/help building your own website/Etc *** </p>
       </div>
     </div>
     <div class="row">
