--- a/contact.html
+++ b/contact.html
@@ -72,12 +72,11 @@
     <div id="about" class="row">
       
       <div id="about" class="col-lg-12">
-                <p>*** Reach out to me at (801)979-4813 or via email at: <a href= "mailto: fiuzaisaac@hotmail.com"> fiuzaisaac@hotmail.com </a>
+                <p>*** Reach out to me at <b>(801)979-4813</b> or via email at: <a href= "mailto: fiuzaisaac@hotmail.com"> fiuzaisaac@hotmail.com </a><br>
                   if you have any questions/suggestions/help building your own website/etc ***
                  </p> 
 <br><br><br><br><br>
       </div>
-    </div>
     <div class="row">
       <div class="col-lg-12">
         <div class="card">
@@ -92,7 +91,6 @@
     </div>
   </div>
   </div>
-
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
